--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.0",
+    "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.0",
     "axios": "^1.8.4",
     "react": "^19.0.0",
